<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.moictab.yonunca.activity.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_first"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_never_have" />

            <RadioButton
                android:id="@+id/rb_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_never_myself" />

            <RadioButton
                android:id="@+id/rb_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_never_have_been" />
        </RadioGroup>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/i_never_have"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/send" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

    </LinearLayout>

</LinearLayout>
