<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.moictab.yonunca.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/start_game" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/add_new" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/btn_statistics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            android:text="@string/statistics" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5" />

    </LinearLayout>
</LinearLayout>
